@@ -1935,9 +1935,12 @@ cb_build_section_name (cb_tree name, const int sect_or_para)
 		  Duplicate paragraphs are allowed if not referenced;
 		  Checked in typeck.c
 		*/
-		if (!CB_LABEL_P (x) || sect_or_para == 0 ||
+		if ((!CB_LABEL_P (x) || sect_or_para == 0 ||
 		    (sect_or_para && CB_LABEL_P (x) &&
-		    CB_LABEL (x)->flag_section)) {
+		    CB_LABEL (x)->flag_section)) &&
+		    !(cb_relax_paragraph_name_uniqueness &&
+		      (CB_FIELD_P (x) ||
+		       (CB_LABEL_P (x) && CB_LABEL (x)->flag_section)))) {
 			redefinition_error (name);
 			return cb_error_node;
 		}
